test/domains/compilerErrors/sparseSubdom-mismatch-2.chpl

const dr = {1:int(8)..8:int(8)};
const sd: sparse subdomain(dr) = 2; // error: domain <- int
