test/domains/compilerErrors/sparseSubdom-mismatch-2.good
sparseSubdom-mismatch-2.chpl:3: error: assigning int(64) to an irregular domain
